--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
+*{
+  box-sizing: border-box;
+  margin: 0px;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(rgb(149, 210, 221)10%, rgb(187,100, 100)40%, white);
+  text-align: center;
+  height: 98vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  background-color: rgb(92, 121, 111);
+  border-radius: 30px;
+  height: 60px;
+  width: 300px;
+  text-align: center;
+  border: 2px solid black;
 }
+button:hover{
+  background-color: aquamarine;
+}
+h1{
+  text-align: center;
+  font-weight: bolder;
+  text-shadow: 2px 2px aqua;
+}
+.b1{
+  position: relative;
+  top: 60px;
+  right: 30px;
+}
+.b2{
+  position: relative;
+  top: 60px;
+  left: 50px;
+}
+
